fix h2, (btn) mede into (a) and menu no jumping

--- a/module-06/css/style.css
+++ b/module-06/css/style.css
@@ -8,6 +8,7 @@
     padding: 0;
 }
 
+
 .container {
     width: 1200px;
     margin: 0 auto;
@@ -17,7 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 65px;
+    padding-top: 28px;
 
 }
 
@@ -25,41 +26,49 @@
     text-decoration: none;
     color: #95e1d3;
     font: 700 30px 'Montserrat';
-     
+
 }
 
 .menu-list {
     display: flex;
     justify-content: space-between;
     flex-basis: 490px;
+
 }
 
 .menu-item {
     list-style: none;
-padding: o 10px;
+    padding: 0 10px;
+
 }
 
 .menu-item-link {
-
+    position: relative;
     font: 500 14px 'Montserrat';
     color: #95e1d3;
     text-decoration: none;
     text-transform: uppercase;
-    transition: color 200ms linear ;
+    transition: all 200ms linear;
 }
 
-.menu-item:hover .menu-item-link {
-    color: #f38181;
-    
-}
-
-.menu-item:hover::after {
+.menu-item-link::after {
+    position: absolute;
+    bottom: -12px;
     display: block;
     content: '';
     width: 100%;
     height: 3px;
     background-color: #f38181;
-  
+    transition: all 200ms linear;
+    opacity: 0;
+}
+
+.menu-item-link:hover::after {
+    opacity: 1;
+}
+
+.menu-item-link:hover {
+    color: #f38181;
 }
 
 .text-h2,
@@ -68,15 +77,17 @@ padding: o 10px;
 }
 
 .text-h3 {
+
     color: #333333;
     font: 400 24px 'Kaushan Script';
-    margin-bottom: 22px;
     margin-top: 113px;
+    margin-bottom: 20px;
 }
+
 
 .text-h2 {
     color: #333333;
-    font: 700 30px Montserrat;
+    font: 700 30px "Montserrat";
     text-transform: uppercase;
 }
 
@@ -88,7 +99,14 @@ padding: o 10px;
     height: 3px;
     background-color: #f38181;
     margin-top: 42px;
-    margin-bottom: 66px;
+
+}
+
+.services-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 66px;
 }
 
 .services-item {
@@ -100,18 +118,6 @@ padding: o 10px;
 
 .services-item:not(:nth-last-child(-n+3)) {
     margin-bottom: 101px;
-}
-
-.services-link {
-    text-decoration: none;
-    
-}
-
-.services-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
 }
 
 .services-titles {
@@ -169,6 +175,7 @@ padding: o 10px;
     line-height: 24px;
     text-align: center;
     margin-bottom: 92px;
+    margin-top: 66px;
 }
 
 .cosial-link {
@@ -188,7 +195,7 @@ padding: o 10px;
 
 .profession {
     color: #999999;
-    font: 400 15px 'Roboto'italic;
+    font: 400 15px "Roboto";
     line-height: 24px;
 }
 
@@ -200,7 +207,11 @@ padding: o 10px;
 .team-list {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 82px;
+
+}
+
+.meet-our-team {
+    padding-bottom: 82px;
 }
 
 .team-container {
@@ -215,65 +226,63 @@ padding: o 10px;
     position: absolute;
     right: 0;
     bottom: 0;
-    
+
 }
 
 .team-container:hover .team-img {
     top: 0;
-    left: 0;    
+    left: 0;
 }
-.team-container:hover .gradient{
+
+.team-container:hover .gradient {
     opacity: 1;
 }
 
 .gradient {
-    
-    opacity: 0;
     position: absolute;
     width: 380px;
     height: 470px;
     z-index: 1;
     background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%);
-    -webkit-box-shadow: 10px 9px 1px 2px rgba(149,225,211,1);
-    -moz-box-shadow: 10px 9px 1px 2px rgba(149,225,211,1);
-    box-shadow: 10px 9px 1px 2px rgba(149,225,211,1);
-    transition: linear 200ms;
-    }
-    .team-container:hover .social-container{
-        opacity: 1;
-        
-    }
-.social-container {
+    -webkit-box-shadow: 10px 9px 1px 2px rgba(149, 225, 211, 1);
+    -moz-box-shadow: 10px 9px 1px 2px rgba(149, 225, 211, 1);
+    box-shadow: 10px 9px 1px 2px rgba(149, 225, 211, 1);
     opacity: 0;
-    transition: linear 200ms;
+    transition: all 200ms linear;
+}
+
+.team-container:hover .social-container {
+    opacity: 1;
+
+}
+
+.social-container {
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     width: 380px;
     height: 470px;
+    transition: all 200ms linear;
+    opacity: 0;
     z-index: 2;
 }
 
 .btn-social {
-    cursor: pointer;
+    border: 1px solid #f38181;
     width: 56px;
     height: 56px;
-    border: 1px solid #f38181;
     background-color: #fce38a;
     background-repeat: no-repeat;
     background-position: center;
-    transition: linear 200ms;
-}
-.btn-social:hover{
-    background-color:#95e1d3;
-    border-color: #95e1d3;
-    
+    transition: all 200ms linear;
+    list-style: none;
 }
 
-.social-link {
-    width: 100%;
-    height: 100%;
+.btn-social:hover {
+    background-color: #95e1d3;
+    border-color: #95e1d3;
+
 }
 
 .facebook {
@@ -296,28 +305,32 @@ padding: o 10px;
 
 }
 
-.footer-site::before{
+.footer-site::before {
     display: block;
     content: '';
     width: 1200px;
     height: 1px;
     background-color: #e5e5e5;
 }
+
 .footer-container {
     display: flex;
     justify-content: space-between;
     min-height: 62px;
     align-items: center;
 }
-.footer-text{
+
+.footer-text {
     color: #333333;
-font: 400 14px 'Montserrat';
+    font: 400 14px 'Montserrat';
 
 }
-span{
+
+.footer-p {
     color: #f38181;
 }
-.btn-email{
+
+.btn-email {
     cursor: pointer;
     width: 150px;
     height: 42px;
@@ -329,17 +342,18 @@ span{
     font-weight: 700;
     text-transform: uppercase;
 }
-.mail{
+
+.mail {
     width: 230px;
     height: 40px;
     border: 1px solid #e7e7e7;
-    color: #e7e7e7;
+    color: #000000;
     padding-left: 13px;
-    font: 300 15px "Roboto";    
+    font: 300 15px "Roboto";
     line-height: 24px;
-
-}
-.email-input{
-    display: flex;
     
+}
+
+.email-input {
+    display: flex;
 }
